Shuffled the triggerSlide conditions around to be safer and changed the mega man css to use true/false property values instead of pure existence. Fixed height bug by checking that they were jumping and not sliding to set the collision box height to 1x mega man height.

--- a/src/megaman/assets/styles/mega-man.css
+++ b/src/megaman/assets/styles/mega-man.css
@@ -46,25 +46,45 @@
   align-items: end;
 }
 
-.mega-man[jumping] {
-  align-items: start; /* Shifts collision box up when jumping */
-  --jump-state: 10;
-}
-
-.mega-man[sliding] {
-  --slide-state: 12;
-}
-
 .mega-man > .mega-man-collision {
   width: calc(var(--mega-man-width) * 0.75);
   height: calc(var(--mega-man-height) * 0.75);
 }
 
-.mega-man[sliding] > .mega-man-collision {
-  height: calc(var(--mega-man-height) * 0.65); /* Shortens collision box when sliding */
+.mega-man[jumping='true'] {
+  --jump-state: 10;
+}
+
+.mega-man[jumping='true'][sliding='false'] > .mega-man-collision {
+  /* Heightens collision box when jumping */
+  height: var(--mega-man-height);
+}
+
+.mega-man[sliding='true'] {
+  --slide-state: 12;
+}
+
+.mega-man[sliding='true'] > .mega-man-collision {
+  /* Shortens collision box when sliding */
+  height: calc(var(--mega-man-height) * 0.65);
+}
+
+/* Debug */
+
+.mega-man > .mega-man-collision[debug='true'] {
+  background-color: #00ff4430 !important;
+}
+
+.mega-man[jumping='true'] > .mega-man-collision[debug='true'] {
+  background-color: #00ffff30 !important;
+}
+
+.mega-man[sliding='true'] > .mega-man-collision[debug='true'] {
+  background-color: #ff00ff30 !important;
 }
 
 /* Animation */
+
 .mega-man.spawn-animation-state {
   --backgroundPositionX: var(--spawnAnimationStartPositionX);
   --backgroundPositionY: var(--spawnAnimationStartPositionY);
